<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_filter_options"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:backgroundTint="#FFFFFF"
    android:visibility="gone"
    app:cardCornerRadius="30dp"
    app:cardElevation="0dp"
    tools:context=".homestore.filteroptions.FragmentFilterOptions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/image_cancel_filter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#010035"
            android:elevation="12dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/image_cancel" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/filter_options"
            android:textColor="#010035"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_cancel_filter"
            app:layout_constraintEnd_toStartOf="@+id/btn_done_filter"
            app:layout_constraintStart_toEndOf="@+id/image_cancel_filter"
            app:layout_constraintTop_toTopOf="@+id/image_cancel_filter" />

        <Button
            android:id="@+id/btn_done_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FF6E4E"
            android:text="@string/btn_done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_cancel_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_cancel_filter" />

        <TextView
            android:id="@+id/text_brand_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/brand"
            android:textColor="#010035"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_cancel_filter" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_brand_filter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_brand_filter" />

        <EditText
            android:id="@+id/edit_brand_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@null"
            android:elevation="1dp"
            android:ellipsize="end"
            android:hint="@string/name_phone"
            android:maxLines="1"
            android:textColor="#010035"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_view_brand_filter"
            app:layout_constraintEnd_toEndOf="@+id/card_view_brand_filter"
            app:layout_constraintStart_toStartOf="@+id/card_view_brand_filter"
            app:layout_constraintTop_toTopOf="@+id/card_view_brand_filter" />

        <TextView
            android:id="@+id/text_price_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            android:textColor="#010035"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_brand_filter" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_price_filter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_price_filter" />

        <EditText
            android:id="@+id/edit_price_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@null"
            android:elevation="1dp"
            android:ellipsize="end"
            android:hint="@string/cost_range"
            android:maxLines="1"
            android:textColor="#010035"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_view_price_filter"
            app:layout_constraintEnd_toEndOf="@+id/card_view_price_filter"
            app:layout_constraintStart_toStartOf="@+id/card_view_price_filter"
            app:layout_constraintTop_toTopOf="@+id/card_view_price_filter" />

        <TextView
            android:id="@+id/text_size_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/size"
            android:textColor="#010035"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_price_filter" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_size_filter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_size_filter" />

        <EditText
            android:id="@+id/edit_size_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@null"
            android:elevation="1dp"
            android:hint="@string/edit_size_options"
            android:textColor="#010035"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_view_size_filter"
            app:layout_constraintEnd_toEndOf="@+id/card_view_size_filter"
            app:layout_constraintStart_toStartOf="@+id/card_view_size_filter"
            app:layout_constraintTop_toTopOf="@+id/card_view_size_filter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>